@@ -156,7 +156,11 @@ Description: Python bindings to QGIS - architecture-independent files
 
 Package: qgis-providers
 Architecture: any
-Depends: qgis-providers-common (= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends:
+ qgis-providers-common (= ${source:Version}),
+ libqt4-sql-sqlite,
+ ${shlibs:Depends},
+ ${misc:Depends}
 Replaces: qgis (<= 1.6)
 Breaks: qgis (<= 1.6)
 Description: collection of data providers to QGIS
